fixed text alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -246,7 +246,7 @@ a svg {
     h1 {
         float: left;
         position: relative;
-        top: -10px;
+        top: -12px;
         left: $mdspacing;
         font-size: 1.414em;
     }
